Rough draft of the other project layout in index

--- a/summerfest.html
+++ b/summerfest.html
@@ -93,7 +93,7 @@
                 <h2>Design Work</h2>
                 <div class="graphics">
                     <h3>Still Graphics</h3>
-                    <p>Ever since starting from 2018, I have been creating different still graphics to help complement our social media post on the Summerfest social media to help inform the upcoming event goers and advertise the event to a wider audience. This includes graphics regarding the prizes for the event raffle, reminder posts about the event and different social media banners and profile. Bellow are a few notable graphics I've created for the 2022 Summerfest!</p>
+                    <p>Ever since starting from 2018, I have been helping create different still graphics to complement our social media post on the Summerfest social media to help inform the upcoming event goers and advertise the event to a wider audience. This includes graphics regarding the prizes for the event raffle, reminder posts about the event and different social media banners and profile. Bellow are a few notable graphics I've created for the 2022 Summerfest!</p>
                     <figure class="figure-analysis project-img" id="sketch-img">
                         <img alt="Initial sketches on paper with potential ideas" class="lazy js-off" src="img/2021_Icebreaker/icebreaker_storyboard_100.jpg"
                         data-src="img/2021_Icebreaker/icebreaker_storyboard_400.jpg"
