Copy for the Splitiwise project and other fix
Reworded sections and added a template for a coming soon page that will be edited later

--- a/Fureverhome.html
+++ b/Fureverhome.html
@@ -23,7 +23,7 @@
                 </a>
 
                 <div class="nav-grid-text grid nav-button add-gutters">
-                    <a href="index.html#Featured_Project" class="nav-item">Projects</a>
+                    <a href="index.html#Featured_Project" class="nav-item">Works</a>
                     <a href="about.html" class="nav-item">About</a>
                     <a href="#" class="nav-item">Resume</a>
                 </div>
