--- a/works.html
+++ b/works.html
@@ -9,7 +9,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Fira+Sans:wght@500&family=Noto+Sans+JP&family=Noto+Sans:wght@400;500&display=swap" rel="stylesheet">
 
-    <title>About Me | Luke Do</title>
+    <title>Works | Luke Do</title>
 
     <link href="css/main_work.css" rel="stylesheet">
 
@@ -56,7 +56,7 @@
 
                 <p>Currently, I'm pursuing my undergraduate degree at <a href="https://www.sfu.ca/siat.html" class="in-text-link" target="_blank">SIAT</a> (The School of Interactive Arts and Technology) at Simon Fraser University. While during my uni courses, I'm also volunteering at the <a href="https://sfusummerfestival.com/" class="in-text-link" target="_blank">SFU Summer Festival</a> as their social media coordinator and graphic designer. I have also worked at <a href="https://www.fraserhealth.ca/" class="in-text-link">Fraser Health</a> as a Digital Media Communication Specialist where I designed various graphics to advocate for Indigenous Health across the lower mainland.</p>
 
-                <p>When I'm not busy designing or doing my course work, you can often find me taking landscape photography (<em>don't mind me just plugging my <a href="https://www.instagram.com/lukex1a/" class="in-text-link" target="_blank">Instagram here</a></em>), playing video games (currently suffering from <a href="https://www.ea.com/games/apex-legends" class="in-text-link" target="_blank">Apex Legends</a> and <a href="https://genshin.hoyoverse.com/en/" class="in-text-link" target="_blank">Genshin Impact</a> addiction), or watching Japanese Anime (my favorite from last season was <a href="https://anilist.co/anime/153152/Boku-no-Kokoro-no-Yabai-Yatsu/" class="in-text-link" target="_blank">The Dangers in My Heart</a>).</p>
+                <p>When I'm not busy designing or doing my course work, you can often find me taking landscape photography (<em>don't mind me just plugging my <a href="https://www.instagram.com/lukex1a/" class="in-text-link" target="_blank">Instagram here</a></em>), playing video games (currently suffering from <a href="https://www.ea.com/games/apex-legends" class="in-text-link" target="_blank">Apex Legends</a> and <a href="https://genshin.hoyoverse.com/en/" class="in-text-link" target="_blank">Genshin Impact</a> addiction), or watching Japanese Anime (my favorite from this season is <a href="https://myanimelist.net/anime/50709/Lycoris_Recoil?q=ly&cat=anime" class="in-text-link" target="_blank">Lycoris Recoil</a>).</p>
             </div>
         </div>
     </main>
