removed the need for the other project section

--- a/Karamatsu.html
+++ b/Karamatsu.html
@@ -46,7 +46,7 @@
                                 <p class="role-type">The team</p>
                                 <p class="role-details">Luke Do</p>
                                 <p class="role-details">Ryan Tsang</p>
-                                <p class="role-details">Trisha Wong</p>
+                                <p class="role-details"><a href="https://www.trishachockiewong.com/" class="in-text-link" target="_blank">Trisha Wong</a></p>
                                 <p class="role-details">Aakash Gupta</p>
                                 <p class="role-details">Fiona McCauley</p>
                             </div>
