--- a/Splitwise.html
+++ b/Splitwise.html
@@ -62,7 +62,7 @@
                                 <div class="col-1">
                                     <p class="role-type">The Team</p>
                                     <p class="role-details">Luke Do</p>
-                                    <p class="role-details">Particia Sugiarta</p>
+                                    <p class="role-details"><a href="https://www.patriciasugiarta.com/" class="in-text-link" target="_blank">Particia Sugiarta</a></p>
                                     <p class="role-details">Kezia Gabriella Taufiq</p>
                                 </div>
                                 <div class="col-2">
