Added banner image for projects and minor fix
fixed colors for projects and embedded kara video iframe into index

--- a/Splitwise.html
+++ b/Splitwise.html
@@ -33,22 +33,21 @@
             <section class="project-banner">
                     <div class="grid project-banner">
                     <!-- left side -->
-                        <div class="project-img">
+                        <div class="project-img static-img">
                             <figure>
-                                <video class="lazy js-off" width="1920" height="1080" data-src="img/2021_Icebreaker/Spring2021.webm" src="img/2021_Icebreaker/Spring2021_fallback_100.jpg" autoplay loop playsinline muted aria-label="SFU Anime's Spring 2021 Icebreaker Trailer Thumbnail" controls="controls"></video>
-                                <img alt="SFU Anime's Spring 2021 Icebreaker Trailer Thumbnail"class="lazy js-off" src="img/2021_Icebreaker/Spring2021_fallback_100.jpg"
-                                data-src="img/2021_Icebreaker/Spring2021_fallback_400.jpg"
-                                data-srcset="img/2021_Icebreaker/Spring2021_fallback_400.jpg 400w,
-                                            img/2021_Icebreaker/Spring2021_fallback_600.jpg 600w"
+                                <img alt="Splitiwse Banner image" class="lazy js-off" src="img/Splitiwise/Splitwise_banner_100.png"
+                                data-src="img/Splitiwise/Splitwise_banner_400.png"
+                                data-srcset="img/Splitiwise/Splitwise_banner_400.png 400w,
+                                             img/Splitiwise/Splitwise_banner_800.png   800w,
+                                             img/Splitiwise/Splitwise_banner_1080.png  1080w"
                                 data-sizes="100w">
-
-                                <noscript>  
-                                    <video src="img/2021_Icebreaker/Spring2021.webm" width="1920" height="1080" autoplay loop playsinline muted aria-label="SFU Anime's Spring 2021 Icebreaker Trailer Thumbnail" controls="controls"></video> 
-                                        <img src="img/2021_Icebreaker/Spring2021_fallback_400.jpg" alt="SFU Anime's Spring 2021 Icebreaker Trailer Thumbnail"
-                                        srcset="img/2021_Icebreaker/Spring2021_fallback_400.jpg 400w,
-                                                img/2021_Icebreaker/Spring2021_fallback_600.jpg 600w" 
-                                        sizes="(min-width: 60rem) 50vw, 100vw"
-                                        >
+                                <noscript>
+                                    <img src="img/Splitiwise/Splitwise_banner_400.png" alt="Splitiwse Banner image"
+                                    srcset="img/Splitiwise/Splitwise_banner_400.png 400w,
+                                            img/Splitiwise/Splitwise_banner_800.png   800w,
+                                            img/Splitiwise/Splitwise_banner_1080.png  1080w" 
+                                    sizes="(min-width: 74rem) 50vw, 100vw"
+                                    >
                                 </noscript>
                             </figure> 
                         </div>  
@@ -57,7 +56,6 @@
                             <p class="project-type">UI/UX Design - UX Research - Prototyping</p>
                             <h1>Splitwise Feature Design</h1>
                             <p class="project-description">A Feature Design Project that aims to create a new feature for an existing application</p> 
-                            <!-- <p class="project-description">Personal Project</p> -->
                             <div class="grid project-roles">
                                 <div class="col-1">
                                     <p class="role-type">The Team</p>
