Added storyboard img and outro shot for kara project

--- a/Karamatsu.html
+++ b/Karamatsu.html
@@ -236,7 +236,7 @@
                             <figcaption class="caption-analysis">Animation with pen tool mask on</figcaption>
                         </figure>
                     </div>
-                    <p>After wasting too many days watching youtube tutorials and troubleshooting the nParticles issue, I wasn't able to resolve  the issues. However, as a quick fix to the nParticles system, I decided to just animate one Sakura petal and do the rest in After Effects using the CC Particle world effect. In hindsight, I should have done this from the beginning as it took way too long for what its worth.
+                    <p>After wasting too many days watching youtube tutorials and troubleshooting the nParticles issue, I wasn't able to resolve the issues. However, as a quick fix to the nParticles system, I decided to just animate one Sakura petal and do the rest in After Effects using the CC Particle world effect. In hindsight, I should have done this from the beginning as it took way too long for what its worth.
                     </p>
                     <!-- video of sakura petals in AE -->
                     <figure class="project-img figure-analysis">
@@ -262,7 +262,7 @@
                     
                     <h2>Final Results!</h2>
                     <p>After working on the animation for over a month in total, our team was able to showcase our fanmade 3D music video in our class's final showcase. We received great praises from our instructors and peers, and were even awarded the "Rendering Revive" award for our creative camera movement and lighting in creating a POV 3D animation! You can watch our final animation <a href="https://youtu.be/P-Jd2lbXlTE" class="in-text-link" target="_blank">here!</a> And for more details about our project including the initial animatic and character design, <a href="https://iat343dreamers.wixsite.com/iat-343dreamers" class="in-text-link" target="_blank">visit our project website!</a></p>
-                    <!-- video/photo of after effects with sakura and raccoon -->
+                    <!-- photo of the award -->
                     <figure class="project-img figure-analysis" id="award">
                         <img alt="Icebreaker color palette" class="lazy js-off" src="img/2021_Icebreaker/icebreaker_palette_100.png"
                         data-src="img/2021_Icebreaker/icebreaker_palette_400.png"
@@ -283,7 +283,7 @@
 
             <section class="project-analysis" id="Keytakeaways">
                 <h2>Reflection</h2>
-                <p>As this was my first time 3D modelling and animating, I definitely feel that I could have done some parts more efficiently such as just using a transparent object to simulate the water dropplet instead of using Bifrost as it would make rendering the scene easier. However, through this project, I have learned the basic principles of 3D modelling and animation which could be transfered over a different 3D modelling program such as Blender. This project also sparked my interests in further learing 3D modelling and creating different renders (Blender Donut tutorial here I come!)</p>
+                <p>As this was my first time 3D modelling and animating, I definitely feel that I could have done some parts more efficiently such as just using a transparent object to simulate the water dropplet instead of using Bifrost as it would make rendering the scene easier. However, through this project, I have learned the basic principles of 3D modelling and animation which could be transfered over a different 3D modelling program such as Blender. </p>
             </section>
 
             <section class="more-project">
