--- a/about.html
+++ b/about.html
@@ -52,11 +52,11 @@
             <div class="about-bio">
                 <h1>About me</h1>
 
-                <p>Hi, I'm Luke and I'm a Motion and Graphic Designer from Vancouver, Canada. I enjoy exploring different ways of breathing in life into what would otherwise be just a static image.</p>
+                <p>Hi, I'm Luke and I'm a Motion and Product Designer from Vancouver, Canada. I enjoy exploring different ways of breathing in life into what would otherwise be just a static image and desiging .</p>
 
                 <p>Currently, I'm pursuing my undergraduate degree at <a href="https://www.sfu.ca/siat.html" class="in-text-link" target="_blank">SIAT</a> (The School of Interactive Arts and Technology) at Simon Fraser University. While during my uni courses, I'm also volunteering at the <a href="https://sfusummerfestival.com/" class="in-text-link" target="_blank">SFU Summer Festival</a> as their social media coordinator and graphic designer. I have also worked at <a href="https://www.fraserhealth.ca/" class="in-text-link">Fraser Health</a> as a Digital Media Communication Specialist where I designed various graphics to advocate for Indigenous Health across the lower mainland.</p>
 
-                <p>When I'm not busy designing or doing my course work, you can often find me taking landscape photography (<em>don't mind me just plugging my <a href="https://www.instagram.com/lukex1a/" class="in-text-link" target="_blank">Instagram here</a></em>), playing video games (currently suffering from <a href="https://www.ea.com/games/apex-legends" class="in-text-link" target="_blank">Apex Legends</a> and <a href="https://genshin.hoyoverse.com/en/" class="in-text-link" target="_blank">Genshin Impact</a> addiction), or watching Japanese Anime (my favorite from last season was <a href="https://anilist.co/anime/153152/Boku-no-Kokoro-no-Yabai-Yatsu/" class="in-text-link" target="_blank">The Dangers in My Heart</a>).</p>
+                <p>When I'm not busy designing or doing my course work, you can often find me taking landscape photography (<em>don't mind me just plugging my <a href="https://www.instagram.com/lukex1a/" class="in-text-link" target="_blank">Instagram here</a></em>), playing video games (currently addicted to <a href="https://gaiden.sega.com/" class="in-text-link" target="_blank">The Yakuza Series</a> and <a href="https://hsr.hoyoverse.com/en-us/" class="in-text-link" target="_blank">Honkai Star Rail</a>), or watching Japanese Anime (my favorite last season was <a href="https://anilist.co/anime/153152/Boku-no-Kokoro-no-Yabai-Yatsu/" class="in-text-link" target="_blank">The Dangers in My Heart</a>).</p>
             </div>
         </div>
     </main>
