smol changes to copy and uploaded media files for kara project

--- a/Karamatsu.html
+++ b/Karamatsu.html
@@ -23,7 +23,7 @@
                 </a>
 
                 <div class="nav-grid-text grid nav-button add-gutters">
-                    <a href="index.html#Featured_Project" class="nav-item">Works</a>
+                    <a href="index.html#Featured_Project" class="nav-item">Projects</a>
                     <a href="about.html" class="nav-item">About</a>
                     <a href="#" class="nav-item">Resume</a>
                 </div>
@@ -76,57 +76,11 @@
                 <h2>Process</h2>
                 <div class="shotlisting">
                     <h3>Visualizing cinematography: Shotlist & storyboarding</h3>
-                    <p>The very first step that we needed to take was to break down the song into verses and create a storyboard to visualize what scenes/models we needed to create and animate. In this stage, I was in charge of writing the shot list and storyboarding the third chorus up until the ending of the song.</p>
+                    <p>The very first step that we needed to take was to break down the song into verses and create a storyboard to visualize what scenes/models we needed to create and animate. In this stage, I was in charge of writing the shot list and storyboarding the third chorus up until the ending of the song with below being some storyboard that I was in charge of.</p>
                     <!-- put ss of storyboard img here -->
-                    <figure class="figure-analysis project-img" id="sketch-img">
-                        <img alt="Initial sketches on paper with potential ideas" class="lazy js-off" src="img/2021_Icebreaker/icebreaker_storyboard_100.jpg"
-                        data-src="img/2021_Icebreaker/icebreaker_storyboard_400.jpg"
-                        data-srcset="img/2021_Icebreaker/icebreaker_storyboard_400.jpg 400w,
-                                     img/2021_Icebreaker/icebreaker_storyboard_600.jpg 600w,
-                                     img/2021_Icebreaker/icebreaker_storyboard_1080.jpg 1080w"
-                        data-sizes="100w">
-                        <noscript>
-                            <img src="img/2021_Icebreaker/icebreaker_storyboard_400.jpg" alt="Initial sketches on paper with potential ideas"
-                            srcset="img/2021_Icebreaker/icebreaker_storyboard_400.jpg 400w,
-                                    img/2021_Icebreaker/icebreaker_storyboard_600.jpg 600w,
-                                    img/2021_Icebreaker/icebreaker_storyboard_1080.jpg 1080w" 
-                            sizes="(min-width: 74rem) 50vw, 100vw"
-                            >
-                        </noscript>
-                        <figcaption class="caption-analysis">Initial sketches on paper with potential ideas</figcaption>
-                    </figure>
-                    <!-- put ss and text about storyboard iteration here -->
-                    <h3>Modelling</h3>
-                    <!-- put colors here -->
-                    <p> In between iterating our storyboard, each one of us started on modelling the different objects we would need to include in our animation. I was in charge of modelling the main items in our protagonist's room that they will interact with, namely the night stand and the desk setup which includes the desk itself, computer screens, a mouse and keyboard and finally the keyboard itself. 
-                    </p>
-                    <figure class="project-img figure-analysis" id="color-theme">
-                        <img alt="Icebreaker color palette" class="lazy js-off" src="img/2021_Icebreaker/icebreaker_palette_100.png"
-                        data-src="img/2021_Icebreaker/icebreaker_palette_400.png"
-                        data-srcset="img/2021_Icebreaker/icebreaker_palette_400.png 400w,
-                                     img/2021_Icebreaker/icebreaker_palette_600.png 600w"
-                        data-sizes="100w">
-                        <noscript>
-                            <img src="img/2021_Icebreaker/icebreaker_palette_100.png" alt="Icebreaker color palette"
-                            srcset="img/2021_Icebreaker/icebreaker_palette_400.png 400w,
-                                    img/2021_Icebreaker/icebreaker_palette_600.png 600w" 
-                            sizes="(min-width: 74rem) 50vw, 100vw"
-                            >
-                        </noscript>
-                        <figcaption class="caption-analysis">A render of the mouse and keyboard setup</figcaption>
-                    </figure> 
-                </div>
+                    <div class="grid project-card-2c">
 
-                <div class="rendering-effects-issues">
-                    <h2>Challenge</h2>
-                    <p>During the process of creating the animation, I encountered various issues regarding the different effect system and rendering process. Below are a few notable issues I came across and the solutions I have came up to address it!</p>
-                    <h3>Maya Bifrost issue</h3>
-                    <p>In our animation, I wanted to use Maya's built in effects system "Bifrost" to create realistic water particles and to simulate physics in a 3D environment. However, this decision would cause me issues later on when rendering and animating the scenes. In no particular order, here are 2 notable issues I've encountered when working with Bifrost. </p>
-                    <p>Firstly, when animating the scene, the Bifrost liquid would disappear from the viewports even though the bounding box for the object is still there.</p>
-                    <!-- bifrost liquid disappearing in viewport -->
-                    <div class="grid project-card-2c" id="ren-ayumi">
-
-                        <!-- Ren -->
+                        <!-- Render -->
                             <figure class="figure-analysis project-img">
                                 <img alt="Ren's Reference Sheet" class="lazy js-off" src="img/2021_Icebreaker/ren_reference_100.png"
                                 data-src="img/2021_Icebreaker/ren_reference_400.png"
@@ -142,10 +96,9 @@
                                     sizes="(min-width: 74rem) 50vw, 100vw"
                                     >
                                 </noscript>
-                                <figcaption class="caption-analysis">Ren's Character Reference Sheet by <a href="https://www.instagram.com/sfuanime/" class="in-text-link" target="_blank">SFU Anime Club</a></figcaption>
                             </figure>
 
-                        <!-- Ayumi -->
+                        <!-- Light setup -->
                             <figure class="figure-analysis project-img">
                                 <img alt="Ayumi's Reference Sheet" class="lazy js-off" src="img/2021_Icebreaker/ayumi_reference_100.png"
                                 data-src="img/2021_Icebreaker/ayumi_reference_400.png"
@@ -161,36 +114,58 @@
                                     sizes="(min-width: 74rem) 50vw, 100vw"
                                     >
                                 </noscript>
-                                <figcaption class="caption-analysis">Ayumi's Character Reference Sheet by <a href="https://www.instagram.com/sfuanime/" class="in-text-link" target="_blank">SFU Anime Club</a></figcaption>
                             </figure>
                     </div>
-                    <p>The second and argubly most frustrating issue was the rendering issue I encountered with the Bifrost scene which was that I couldn't render my scene as a sequence in Maya as whenever I initilize the render, it would throw me an error. After researching online for a solution to this issue, I found that this error code has been a known, on-going issue for sevevral years with no real fix aside from redoing everything from scratch and hope it works the next time around.</p>
-                    <!-- insert the error msg image -->
-                    <figure class="project-img figure-analysis">
-                        <video class="lazy js-off" width="1920" height="1080" data-src="img/2021_Icebreaker/ayumi_hand.webm" src="img/2021_Icebreaker/ayumi_hand_100.png" autoplay loop playsinline muted aria-label="After Effects puppet tool" controls="controls"></video>
-                        <img alt="After Effects puppet tool"class="lazy js-off" src="img/2021_Icebreaker/ayumi_hand_100.png"
-                        data-src="img/2021_Icebreaker/ayumi_hand_400.png"
-                        data-srcset="img/2021_Icebreaker/ayumi_hand_400.png 400w,
-                                     img/2021_Icebreaker/ayumi_hand_800.png 800w,
-                                     img/2021_Icebreaker/ayumi_hand_1080.png 1080w"
-                        data-sizes="100w">
+                    <h3>Modelling</h3>
+                    <p> In between iterating our storyboard, each one of us started on modelling the different objects we would need to include in our animation. I was in charge of modelling the main items in our protagonist's room that they will interact with, namely the night stand and the desk setup which includes the desk itself, computer screens, a mouse and keyboard and finally the keyboard itself. 
+                    </p>
+                    <div class="grid project-card-2c">
 
-                        <noscript>
-                            <video src="img/2021_Icebreaker/ayumi_hand.webm" autoplay loop playsinline muted aria-label="After Effects puppet tool" controls="controls"></video> 
-                            <img src="img/2021_Icebreaker/ayumi_hand_400.png" alt="After Effects puppet tool"
-                            srcset="img/2021_Icebreaker/ayumi_hand_400.png 400w,
-                                    img/2021_Icebreaker/ayumi_hand_800.png 800w,
-                                    img/2021_Icebreaker/ayumi_hand_1080.png 1080w" 
-                            sizes="(min-width: 74rem) 50vw, 100vw"
-                            >
-                        </noscript>
-                        <figcaption class="caption-analysis">The puppet tool in action</figcaption>
-                    </figure> 
-                    <p>Despite this issue, I found that I was able to still render the scene only if I do it manually on a frame by frame basis using the Arnold render view. However, through doing this, I encountered a different issue where Maya would just randomly crash which caused a significant setback in the rendering process. Unfortunately, I couldn't solve the issue aside from brute forcing it to render through trial and error.</p>
-                    
+                        <!-- Render -->
+                            <figure class="figure-analysis project-img">
+                                <img alt="Ren's Reference Sheet" class="lazy js-off" src="img/2021_Icebreaker/ren_reference_100.png"
+                                data-src="img/2021_Icebreaker/ren_reference_400.png"
+                                data-srcset="img/2021_Icebreaker/ren_reference_400.png 400w,
+                                             img/2021_Icebreaker/ren_reference_800.png 800w,
+                                             img/2021_Icebreaker/ren_reference_1080.png 1080w"
+                                data-sizes="100w">
+                                <noscript>
+                                    <img src="img/2021_Icebreaker/ren_reference_400.png" alt="Ren's Reference Sheet"
+                                    srcset="img/2021_Icebreaker/ren_reference_400.png 400w,
+                                            img/2021_Icebreaker/ren_reference_800.png 800w,
+                                            img/2021_Icebreaker/ren_reference_1080.png 1080w" 
+                                    sizes="(min-width: 74rem) 50vw, 100vw"
+                                    >
+                                </noscript>
+                                <figcaption class="caption-analysis">A render of the keyboard and mouse I modelled</figcaption>
+                            </figure>
+
+                        <!-- Light setup -->
+                            <figure class="figure-analysis project-img">
+                                <img alt="Ayumi's Reference Sheet" class="lazy js-off" src="img/2021_Icebreaker/ayumi_reference_100.png"
+                                data-src="img/2021_Icebreaker/ayumi_reference_400.png"
+                                data-srcset="img/2021_Icebreaker/ayumi_reference_400.png 400w,
+                                             img/2021_Icebreaker/ayumi_reference_800.png 800w,
+                                             img/2021_Icebreaker/ayumi_reference_1080.png 1080w"
+                                data-sizes="100w">
+                                <noscript>
+                                    <img src="img/2021_Icebreaker/ayumi_reference_400.png" alt="Ayumi's Reference Sheet"
+                                    srcset="img/2021_Icebreaker/ayumi_reference_400.png 400w,
+                                            img/2021_Icebreaker/ayumi_reference_800.png 800w,
+                                            img/2021_Icebreaker/ayumi_reference_1080.png 1080w" 
+                                    sizes="(min-width: 74rem) 50vw, 100vw"
+                                    >
+                                </noscript>
+                                <figcaption class="caption-analysis">Lighting setup for the render</figcaption>
+                            </figure>
+                    </div>
+                </div>
+
+                <div class="rendering-effects-issues">
+                    <h2>Challenge</h2> 
                     <!-- Maya Particles issue -->
                     <h3>Maya nParticles issue</h3>
-                    <p>In the outro scene of our animation, I wanted to simulate a gush of wind blowing sakura petals from outside to make the curtains move and flower petals go from the outside into the room through the use of Maya's nParticles and nCloth systems respectively. However, in the process, I ran into issues with the nParticles systems, namely it not displaying the flower petals properly but instead showed a white sphere even though we added the flower object so that Maya would be able to generate more flower petals flying into the shot. Another issue was that the nCloth effect not simulating properly during render although it was working as intended in the viewport, as it would stay at its first frame position as the scene goes on.</p>
+                    <p>In the outro scene of our animation, I wanted to simulate a gush of wind blowing sakura petals from outside to make the curtains move and flower petals go from the outside into the room through the use of Maya's nParticles and nCloth systems respectively. However, in the process, I ran into issues with the nParticles systems, namely it not displaying the flower petals properly but instead showed a white sphere even though we added the flower object so that Maya would be able to generate more flower petals flying into the shot. Another issue was that the nCloth effect not simulating properly during render although it was working as intended in the viewport render, as it would stay at its first frame position as the scene goes on.</p>
                     <!-- insert video or screenshot of the sphere and ncloth render staying still -->
                     <div class="grid project-card-2c">
 
@@ -236,9 +211,9 @@
                             <figcaption class="caption-analysis">Animation with pen tool mask on</figcaption>
                         </figure>
                     </div>
-                    <p>After wasting too many days watching youtube tutorials and troubleshooting the nParticles issue, I wasn't able to resolve the issues. However, as a quick fix to the nParticles system, I decided to just animate one Sakura petal and do the rest in After Effects using the CC Particle world effect. In hindsight, I should have done this from the beginning as it took way too long for what its worth.
+                    <p>With the deadline of the project coming closer and closer, I decided to do a work around and animated one Sakura petal in Maya and simulate the effect in After Effects using the CC Particle world effect to essentially achieve the same results. 
                     </p>
-                    <!-- video of sakura petals in AE -->
+                    <!-- videos of sakura petals in AE -->
                     <figure class="project-img figure-analysis">
                         <video class="lazy js-off" width="1920" height="1080" data-src="img/2021_Icebreaker/ayumi&ren_moving.webm" src="img/2021_Icebreaker/ayumi&ren_moving_100.png" autoplay loop playsinline muted aria-label="Both Characters moving through using the puppet pen tool" controls="controls"></video>
                         <img alt="Both Characters moving through using the puppet pen tool"class="lazy js-off" src="img/2021_Icebreaker/ayumi&ren_moving_100.png"
