--- a/Splitwise.html
+++ b/Splitwise.html
@@ -55,7 +55,7 @@
                         <div class="project-details">
                             <p class="project-type">UI/UX Design - UX Research - Prototyping</p>
                             <h1>Splitwise Feature Design</h1>
-                            <p class="project-description">A Feature Design Project that aims to create a new feature for an existing application</p> 
+                            <p class="project-description">A Feature Design Project that aims to create a new feature for the expense splitting app Splitwise</p> 
                             <div class="grid project-roles">
                                 <div class="col-1">
                                     <p class="role-type">The Team</p>
