--- a/about.html
+++ b/about.html
@@ -23,7 +23,7 @@
             </a>
 
             <div class="nav-grid-text grid nav-button add-gutters">
-                <a href="index.html#Featured_Project" class="nav-item">Works</a>
+                <a href="index.html#Featured_Project" class="nav-item">Projects</a>
                 <a href="about.html" class="nav-item">About</a>
                 <a href="#" class="nav-item">Resume</a>
             </div>
@@ -52,7 +52,7 @@
             <div class="about-bio">
                 <h1>About me</h1>
 
-                <p>Hi, I'm Luke and I'm a Motion and Product Designer from Vancouver, Canada. I enjoy exploring different ways of breathing in life into what would otherwise be just a static image and desiging .</p>
+                <p>Hi, I'm Luke and I'm a Motion and UI/UX Designer from Vancouver, Canada. I enjoy exploring different ways of breathing in life into what would otherwise be just a static image and desiging .</p>
 
                 <p>Currently, I'm pursuing my undergraduate degree at <a href="https://www.sfu.ca/siat.html" class="in-text-link" target="_blank">SIAT</a> (The School of Interactive Arts and Technology) at Simon Fraser University. While during my uni courses, I'm also volunteering at the <a href="https://sfusummerfestival.com/" class="in-text-link" target="_blank">SFU Summer Festival</a> as their social media coordinator and graphic designer. I have also worked at <a href="https://www.fraserhealth.ca/" class="in-text-link">Fraser Health</a> as a Digital Media Communication Specialist where I designed various graphics to advocate for Indigenous Health across the lower mainland.</p>
 
