Added images to kara project

--- a/icebreaker.html
+++ b/icebreaker.html
@@ -55,9 +55,8 @@
                     <!-- right side -->
                         <div class="project-details">
                             <p class="project-type">Motion Design - Character Animation - Story Boarding</p>
-                            <h1>SFU Anime Spring 2021 Icebreaker</h1>
+                            <h1>SFU Anime Icebreaker</h1>
                             <p class="project-description">A Motion Graphic animation for the <a href="https://www.instagram.com/sfuanime/" class="in-text-link" target="_blank"> SFU Anime Club's</a> seasonal Club's Day event</p> 
-                            <!-- <p class="project-description">Personal Project</p> -->
                             <div class="grid project-roles">
                                 <div class="col-1">
                                     <p class="role-type">Client</p>
