--- a/index.html
+++ b/index.html
@@ -171,7 +171,7 @@
                     <!-- right side -->
                     <div class="project-details project-item">
                         <p class="project-type">Motion Design - Character Animation - Story Boarding</p>
-                        <h3>SFU Anime Spring 2021 Icebreaker</h3>
+                        <h3>SFU Anime Icebreaker</h3>
                         <p class="project-description">A Motion Graphic animation for the <a href="https://www.instagram.com/sfuanime/" class="in-text-link" target="_blank"> SFU Anime Club's</a> seasonal Club's Day event</p> 
                         <a href="icebreaker.html" class="label-button">View SFU Anime Icebreaker</a>
                     </div>
